fixed overflow when click on terms of conditions

--- a/src/app/components/main/register-card/register-card.component.scss
+++ b/src/app/components/main/register-card/register-card.component.scss
@@ -5,6 +5,7 @@
 #signup-btn {
   width: 100%;
   font-size: 15px;
+  margin-top: 5px;
 }
 
 mat-radio-button {
@@ -19,4 +20,10 @@ textarea {
 #tos {
   overflow-y: scroll;
   height: 100px;
+}
+
+@media screen and (max-width: 480px) {
+  #tos {
+    height: 40px;
+  }
 }
